@@ -2,6 +2,6 @@
 
 return array(
     'screenshotsUrl' => $phpRecDbUrl .(empty($phpRecDbUrl)?'':'/'). 'screenshots',
-    'version' => '1.1 Test 2',
+    'version' => '1.1 Test 3',
     'wwwUrl' => $phpRecDbUrl .(empty($phpRecDbUrl)?'':'/') . 'app/www'
 );
