@@ -1,0 +1,8 @@
+<?php
+if(function_exists('fsockopen')) {
+echo "fsockopen function is enabled";
+}
+else {
+echo "fsockopen is not enabled";
+}
+?>
